# tdlog-boardgame-ai

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.py  python-module.cpp  tdlog-boardgame-ai  test
BDD/: BDD.py
Evaluation/: EvaluationFunction.h  LinearCombinationEvaluation.cpp  LinearCombinationEvaluation.h  LinearCombinationOverTimeEvaluation.cpp  LinearCombinationOverTimeEvaluation.h  MobilityEvaluation.cpp  MobilityEvaluation.h  PawnNumberEvaluation.cpp  PawnNumberEvaluation.h  PositionEvaluation.cpp  PositionEvaluation.h
InterfaceGraphique/: BDD.db  BDD.py  ConfigurationDialog.py  DataBaseHandler.py  InterfaceGraphique.py  Test.py  mainwindow.ui
evaluation/: EndGameEvaluation.cpp  EndGameEvaluation.h  IEvaluationFunction.h  LinearCombinationEvaluation.cpp  LinearCombinationEvaluation.h  LinearCombinationOverTimeEvaluation.cpp  LinearCombinationOverTimeEvaluation.h  MobilityEvaluation.cpp  MobilityEvaluation.h  PawnNumberEvaluation.cpp  PawnNumberEvaluation.h  PositionEvaluation.cpp  PositionEvaluation.h  TimeEvaluation.cpp  TimeEvaluation.h
game/: Board.cpp  Board.h  Color.cpp  Color.h  Game.cpp  Game.h  GameState.h  Grid.h  Move.h  Node.cpp  Node.h
graphicalInterface/: ConfigurationDialog.py  DataBaseHandler.py  GameBoard.py  GraphicalInterface.py  MainWindow.ui  Test.py  Timer.py  main.py
gui/: main.py
players/: AlphaBetaPlayer.cpp  AlphaBetaPlayer.h  GeneticalAlgorithm.h  GeneticalEvaluationFunction.h  GeneticalPlayer.cpp  GeneticalPlayer.h  HumanPlayer.cpp  HumanPlayer.h  IPlayer.cpp  IPlayer.h  MinMaxPlayer.cpp  MinMaxPlayer.h  MonteCarloTreeSearchPlayer.cpp  MonteCarloTreeSearchPlayer.h  RandomPlayer.cpp  RandomPlayer.h  Statistics.cpp  Statistics.h
utils/: MinMaxOutput.cpp  MinMaxOutput.h
